updated shoegaze machine
added knobs, visualizer and distortion

--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Shoegaze Machine – Prototype</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #d1c4e9, #f8bbd0); /* periwinkle-magenta */
+      background: linear-gradient(135deg, #d1c4e9, #f8bbd0);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       color: #333;
     }
 
+    canvas#visualizer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at center, #d1c4e9 0%, #f8bbd0 100%);
+    }
+
     h1 {
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       font-size: 2rem;
     }
 
-    label, input {
-      font-size: 1.1rem;
-    }
-
     .controls {
-      background: rgba(255, 255, 255, 0.8);
-      padding: 30px 40px;
+      background: rgba(255, 255, 255, 0.85);
+      padding: 25px 35px;
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       text-align: center;
+      margin: 20px 0;
     }
 
-    input[type=range] {
-      width: 300px;
-      margin-top: 10px;
+    label {
+      display: block;
+      margin: 15px 0 5px;
+      font-size: 1.1rem;
     }
 
     button {
-      margin-top: 20px;
+      margin-top: 25px;
       padding: 10px 20px;
       font-size: 1rem;
       background-color: #7e57c2;
@@ -53,17 +61,32 @@
     button:hover {
       background-color: #9575cd;
     }
+
+    .knob {
+      margin: 0 auto 20px;
+    }
   </style>
+
+  <script src="https://unpkg.com/tone@14.8.39/build/Tone.js"></script>
+  <script src="https://unpkg.com/nexusui@2.0.10/dist/NexusUI.js"></script>
 </head>
 <body>
+  <!-- Ambient Visualizer Canvas -->
+  <canvas id="visualizer"></canvas>
+
   <h1>Shoegaze Machine (Prototype)</h1>
+
+  <!-- Delay + Feedback Controls -->
   <div class="controls">
-    <label for="delayTime">Delay Time</label><br>
-    <input type="range" id="delayTime" min="0" max="1" step="0.01" value="0.5">
-    <br>
+    <label for="delayTimeKnob">Delay Time</label>
+    <div id="delayTimeKnob" class="knob"></div>
+
+    <label for="feedbackKnob">Feedback</label>
+    <div id="feedbackKnob" class="knob"></div>
+
     <button id="start">Start Audio</button>
   </div>
 
-  <script src="script.js"></script>
-</body>
-</html>
+  <!-- Reverb Controls -->
+  <div class="
+
