--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       z-index: -1;
       width: 100%;
       height: 100%;
-      background: radial-gradient(circle at center, #d1c4e9 0%, #f8bbd0 100%);
+      background: hotpink;
     }
 
     h1 {
@@ -34,7 +34,8 @@
     }
 
     .controls {
-      background: rgba(255, 255, 255, 0.85);
+      background: rgba(255, 255, 255, 0.3);
+      backdrop-filter: blur(6px);
       padding: 25px 35px;
       border-radius: 20px;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
