--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
     <div id="distortionKnob" class="knob"></div>
   </div>
 
-  <!-- External Scripts (load last so everything is in the DOM) -->
+  <!-- External Scripts -->
   <script src="https://unpkg.com/tone@14.8.39/build/Tone.js"></script>
   <script src="https://unpkg.com/nexusui@2.0.10/dist/NexusUI.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
-
